--- a/education.html
+++ b/education.html
@@ -4,62 +4,73 @@
 <title>Mason Leonhart's Resume</title>
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  <header class="container">
-    <div class="row">
-      <div class="col">
-        <h1>Mason Leonhart</h1>
-        <h2>(402) 216-2512</h2>
-        <h2>mason.leonhart@gmail.com</h2>
-      </div>
-      <div class="col">
-        <div class="text-right">
-          <div class="placeholderphoto">
-            <img src="placeholderphoto.jpg">
+
+<header>
+  <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <a href="index.html" class="navbar-brand">Home</a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarMenu">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Résumé</a>
+           <div class="dropdown-menu">
+              <ul>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="skills.html">Skills</a></li>
+              </ul>
           </div>
-        </div>
-        <nav class="text-right">
-          <p><a href="index.html">Home</a></p>
-          <p><a href="experience.html">Experience</a></p>
-          <p><a href="skills.html">Skills</a></p>
-        </nav>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Projects</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
+<body class="main-body">
+  <div class="education">
+    <h1 class="group title">Education</h1>
+      <div class="place-group">
+        <h2 class="place">St. Michael-Albertville Senior High School,</h2>
+        <h2 class="place">5800 Jamison Ave NE., St. Michael, MN 55376</h2>
+        <h3 class="position">&mdash; High School Diploma</h3>
+        <h4 class="date">September 2014 - June 2018</h4>
+        <h5 class="description">I spent a lot of time in the STEM section of the building during my time at STMA, and worked on a <span class="CYA">create-your-adventure
+        </span> game in my free time. </h5>
+      </div>
+  </div>
+</body>
+
+<footer class="container">
+  <div class="row text-center">
+    <div class="col">
+      <div class="soclinks">
+        <a href="http://twitter.com"><img src="twitter.png"></a>
       </div>
     </div>
-  </header>
-  <body class="main-body">
-    <div class="education">
-      <h1 class="group title">Education</h1>
-        <div class="place-group">
-          <h2 class="place">St. Michael-Albertville Senior High School,</h2>
-          <h2 class="place">5800 Jamison Ave NE., St. Michael, MN 55376</h2>
-          <h3 class="position">&mdash; High School Diploma</h3>
-          <h4 class="date">September 2014 - June 2018</h4>
-          <h5 class="description">I spent a lot of time in the STEM section of the building during my time at STMA, and worked on a <span class="CYA">create-your-adventure
-          </span> game in my free time. </h5>
-        </div>
-    </div>
-  </body>
-  <footer class="container">
-    <div class="row text-center">
-      <div class="col">
-        <div class="soclinks">
-          <a href="http://twitter.com"><img src="twitter.png"></a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="soclinks">
-          <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="linkedin">
-          <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
-        </div>
+    <div class="col">
+      <div class="soclinks">
+        <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
       </div>
     </div>
-  </footer>
+    <div class="col">
+      <div class="linkedin">
+        <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
