--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+
+<header>
   <nav class="navbar navbar-expand-sm navbar-light bg-light">
     <a href="index.html" class="navbar-brand">Home</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
           <span class="navbar-toggler-icon"></span>
       </button>
-    <div class="collapse navbar-collapse" id="navbarMenu">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Résumé</a>
-            <div class="dropdown-menu">
+      <div class="collapse navbar-collapse" id="navbarMenu">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Résumé</a>
+           <div class="dropdown-menu">
               <ul>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="skills.html">Skills</a></li>
               </ul>
-            </div>
+          </div>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link">Projects</a>
@@ -31,6 +33,7 @@
       </ul>
     </div>
   </nav>
+</header>
 
   <header class="container">
     <div class="row">
@@ -48,32 +51,34 @@
       </div>
     </div>
   </header>
-  <section class="jumbotron">
-    <div class="container">
-      <div class="row text-center">
-        <h1>THIS IS A PLACEHOLDER PHOTO ... YUK!!!!</h1>
-      </div>
-    </div>
-  </section>
-  <footer class="container">
+<section class="jumbotron">
+  <div class="container">
     <div class="row text-center">
-      <div class="col">
-        <div class="soclinks">
-          <a href="http://twitter.com"><img src="twitter.png"></a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="soclinks">
-          <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="linkedin">
-          <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
-        </div>
+      <h1>THIS IS A PLACEHOLDER PHOTO ... YUK!!!!</h1>
+    </div>
+  </div>
+</section>
+
+<footer class="container">
+  <div class="row text-center">
+    <div class="col">
+      <div class="soclinks">
+        <a href="http://twitter.com"><img src="twitter.png"></a>
       </div>
     </div>
-  </footer>
+    <div class="col">
+      <div class="soclinks">
+        <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="linkedin">
+        <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+      </div>
+    </div>
+  </div>
+</footer>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
