--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
 <title>Mason Leonhart's Resume</title>
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
+<meta name="viewport" content="width=device-width, shrink-to-fit=no">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
@@ -12,10 +12,10 @@
 <div class="container header">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a href="index.html" class="navbar-brand">Home</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+    <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarMenu" aria-expanded="false">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarMenu">
+    <div class="navbar-collapse collapse" id="navbarMenu">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Résumé</a>
