--- a/experience.html
+++ b/experience.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-<header>
+<div class="container header">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a href="index.html" class="navbar-brand">Home</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+    <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarMenu" aria-expanded="false">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarMenu">
+    <div class="navbar-collapse collapse" id="navbarMenu">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Résumé</a>
@@ -34,20 +34,24 @@
     </div>
   </nav>
 
-  <section class="jumbotron">
-    <dev class="contactInfo">
-      <p>Mason Leonhart</p>
-      <p>(402) 216-2512</p>
-      <p>mason.leonhart@gmail.com</p>
-    </dev>
-    <dev class="beLegendary">
-        <p style="bottom: 60px;">be</p>
-        <p>legendary.</p>
-    </dev>
-    <img class="mephoto" src="mephoto.jpg">
-    <img class="ndoutline" src="NDoutline.png">
+  <section class="jumbotron header">
+    <div class="container contactInfo" style="padding-left: 0;">
+      <img class="mephoto" src="mephoto.jpg">
+      <ul style="list-style: none; padding-left: 16px;">
+        <li>Mason Leonhart</li>
+        <li>(402) 216-2512</li>
+        <li>mason.leonhart@gmail.com</li>
+      </ul>
+    </div>
+    <div class="container beLegendary" style="padding-left: 0; padding-right: 0; margin-top: -200px;">
+      <ul style="list-style: none; padding-left: 0px; margin-bottom: 0;">
+        <li style="margin-bottom: -30px;">be</li>
+        <li>legendary.</li>
+      </ul>
+      <img class="ndoutline" src="NDoutline.png" style="margin-bottom: -35px;">
+    </div>
   </section>
-</header>
+</div>
 
 <body class="main-body">
   <div class="experience">
@@ -76,25 +80,11 @@
   </div>
 </body>
 
-<footer class="container">
-  <div class="row text-center">
-    <div class="col">
-      <div class="soclinks">
-        <a href="http://twitter.com"><img src="twitter.png"></a>
-      </div>
-    </div>
-    <div class="col">
-      <div class="soclinks">
-        <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
-      </div>
-    </div>
-    <div class="col">
-      <div class="linkedin">
-        <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
-      </div>
-    </div>
-  </div>
-</footer>
+<section class="container footer">
+  <a href="http://twitter.com"><img src="twitter.png"></a>
+  <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
+  <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+</section>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
