--- a/experience.html
+++ b/experience.html
@@ -4,6 +4,7 @@
 <title>Mason Leonhart's Resume</title>
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
@@ -35,20 +36,20 @@
   </nav>
 
   <section class="jumbotron header">
-    <div class="container contactInfo" style="padding-left: 0;">
+    <div class="container contactInfo">
       <img class="mephoto" src="mephoto.jpg">
-      <ul style="list-style: none; padding-left: 16px;">
+      <ul class="contactList">
         <li>Mason Leonhart</li>
         <li>(402) 216-2512</li>
         <li>mason.leonhart@gmail.com</li>
       </ul>
     </div>
-    <div class="container beLegendary" style="padding-left: 0; padding-right: 0; margin-top: -200px;">
-      <ul style="list-style: none; padding-left: 0px; margin-bottom: 0;">
-        <li style="margin-bottom: -30px;">be</li>
-        <li>legendary.</li>
+    <div class="container beLegendary">
+      <ul class="legendaryList">
+        <li class="be">be</li>
+        <li class="legendary">legendary.</li>
       </ul>
-      <img class="ndoutline" src="NDoutline.png" style="margin-bottom: -35px;">
+      <img class="ndoutline" src="NDoutline.png">
     </div>
   </section>
 </div>
