--- a/experience.html
+++ b/experience.html
@@ -82,9 +82,9 @@
 </section>
 
 <section class="container footer">
-  <a href="http://twitter.com"><img src="twitter.png"></a>
-  <a href="https://www.instagram.com/masonleonhart/"><img src="instagram.png"></a>
-  <a href="https://www.linkedin.com/"><img src="linkedin.png"></a>
+  <a href="http://twitter.com" target="_blank"><img src="twitter.png"></a>
+  <a href="https://www.instagram.com/masonleonhart/" target="_blank"><img src="instagram.png"></a>
+  <a href="https://www.linkedin.com/" target="_blank"><img src="linkedin.png"></a>
 </section>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
