--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="container header">
+<section class="container header">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a href="index.html" class="navbar-brand">Home</a>
     <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarMenu" aria-expanded="false">
@@ -52,7 +52,12 @@
       <img class="ndoutline" src="NDoutline.png">
     </div>
   </section>
-</div>
+</section>
+
+<section class="container body">
+  <h1>Abooot Meee</h1>
+  <p></p>
+</section>
 
 <section class="container footer">
   <a href="http://twitter.com" target="_blank"><img src="twitter.png"></a>
