--- a/skills.html
+++ b/skills.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="container header">
+<section class="container header">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a href="index.html" class="navbar-brand">Home</a>
     <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarMenu" aria-expanded="false">
@@ -52,7 +52,7 @@
       <img class="ndoutline" src="NDoutline.png">
     </div>
   </section>
-</div>
+</section>
 
 <section class="container body">
   <div class="skills">
