--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
             </ul>
           </div>
         </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">Projects</a>
-        </li>
       </ul>
     </div>
   </nav>
@@ -56,11 +53,14 @@
 
 <section class="container body">
   <h1>About Me</h1>
-  <p>My roots were established in Fargo in the year 2000, but I was quickly moved to Omaha, NE with my family so my father could pursue a Masters degree at the University of Nebraska Omaha.
+  <p>My roots were established in Fargo in the year 2000, but I was quickly moved to Omaha, NE with my family so my father could pursue a masters degree at the University of Nebraska Omaha.
   Growing up in Omaha is where my love for technology was able to flourish with my attendance to R.M Marrs Magnet Center, a school that specialized in science,
   technology, engineering, and math.</p>
   <p>Marrs gave me the opportunity to explore the worlds of math and robotics by taking challenging math cirriculum throughout my attendance, as well as joining an competetive afterschool LEGO NXT Mindstorms
   robotics team, and taking another competetive robotics class the year after.</p>
+  <p>After graduating from R.M. Marrs, our family moved back up north to St. Michael, MN. Here I attended St. Michael-Albertville Senior High School. STMA was another school that had a strong
+  STEM cirruculum, and I was able to take multiple engineering based courses that taught me a wide range of concepts in engineering from hydrualics and pneumatics, to designing things in CAD programs, and again programing
+  robots to perform tasks that were assigned to us.</p>
 </section>
 
 <section class="container footer">
