--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <p>Marrs gave me the opportunity to explore the worlds of math and robotics by taking challenging math cirriculum throughout my attendance, as well as joining an competetive afterschool LEGO NXT Mindstorms
   robotics team, and taking another competetive robotics class the year after.</p>
   <p>After graduating from R.M. Marrs, our family moved back up north to St. Michael, MN. Here I attended St. Michael-Albertville Senior High School. STMA was another school that had a strong
-  STEM cirruculum, and I was able to take multiple engineering based courses that taught me a wide range of concepts in engineering from hydrualics and pneumatics, to designing things in CAD programs, and again programing
+  STEM cirruculum, and I was able to take multiple engineering courses that taught me a wide range of concepts in engineering from hydrualics and pneumatics, to designing things in CAD programs, and again programing
   robots to perform tasks that were assigned to us.</p>
 </section>
 
