--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
   <p>After graduating from R.M. Marrs, our family moved back up north to St. Michael, MN. Here I attended St. Michael-Albertville Senior High School. STMA was another school that had a strong
   STEM cirruculum, and I was able to take multiple engineering courses that taught me a wide range of concepts in engineering from hydrualics and pneumatics, to designing things in CAD programs, and again programing
   robots to perform tasks that were assigned to us.</p>
+  <p>I recieved my diploma from STMA and moved back to Fargo where I had the goal to attend NDSU and major in their computer engineering program. However, I decided to take some time from school and went to work instead.
+  I learned what it was actually like to participate in our workforce for a bit, but am ready to start learning again.</p>
 </section>
 
 <section class="container footer">
