--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   STEM cirruculum, and I was able to take multiple engineering courses that taught me a wide range of concepts in engineering from hydrualics and pneumatics, to designing things in CAD programs, and again programing
   robots to perform tasks that were assigned to us.</p>
   <p>I recieved my diploma from STMA and moved back to Fargo where I had the goal to attend NDSU and major in their computer engineering program. However, I decided to take some time from school and went to work instead.
-  I learned what it was actually like to participate in our workforce for a bit, but am ready to start learning again.</p>
+  I learned what it was actually like to participate in our workforce for a bit, but I am ready to start learning again.</p>
 </section>
 
 <section class="container footer">
