--- a/experience.html
+++ b/experience.html
@@ -54,17 +54,17 @@
 <section class="container body">
   <h1 class="groupTitle">Experience</h1>
   <h2 class="place">The Tavern Grill,</h2>
-  <h2 class="place">4504 32nd Ave S., Fargo, ND 58104</h2>
+  <h2 class="address">4504 32nd Ave S., Fargo, ND 58104</h2>
   <h3 class="position">&mdash; Server, Host</h3>
   <h4 class="date">November 2019 - March 2020</h4>
   <h5 class="description"><span class="responsibilities">Responsibilites:</span> Serving, greeting, and sectioning of guests.</h5>
   <h2 class="place">Cintas,</h2>
-  <h2 class="place">1700 Main Ave W., West Fargo, ND 58078</h2>
+  <h2 class="address">1700 Main Ave W., West Fargo, ND 58078</h2>
   <h3 class="position">&mdash; Loader/ Unloader</h3>
   <h4 class="date">November 2018 - September 2019</h4>
   <h5 class="description"><span class="responsibilities">Responsibilites:</span> Worked in the warehouse loading and unloading product from company trucks.</h5>
   <h2 class="place">Pepper's Sports Cafe,</h2>
-  <h2 class="place">2510 University Drive S., Fargo, ND 58103</h2>
+  <h2 class="address">2510 University Drive S., Fargo, ND 58103</h2>
   <h3 class="position">&mdash; Server, Line Cook</h3>
   <h4 class="date">June 2018 - November 2018</h4>
   <h5 class="description"><span class="responsibilities">Responsibilites:</span> Serving and greeting of guests and prepping and preparing of food.</h5>
