--- a/education.html
+++ b/education.html
@@ -53,12 +53,14 @@
 
 <section class="container body">
   <h1 class="groupTitle">Education</h1>
+  <h2 class="place">R.M. Marrs Magnet Center</h2>
+  <h2 class="address">5619 South 19th Street, Omaha, NE 55376</h2>
+  <h3 class="position">&mdash; Middle School Education</h3>
+  <h4 class="date">August 2010 - May 2014</h4>
   <h2 class="place">St. Michael-Albertville Senior High School,</h2>
-  <h2 class="address">5800 Jamison Ave NE., St. Michael, MN 55376</h2>
+  <h2 class="address">5800 Jamison Ave Northeast, St. Michael, MN 55376</h2>
   <h3 class="position">&mdash; High School Diploma</h3>
   <h4 class="date">September 2014 - June 2018</h4>
-  <h5 class="description">I spent a lot of time in the STEM section of the building during my time at STMA, and worked on a <span class="CYA">create-your-adventure
-  </span> game in my free time. </h5>
 </section>
 
 <section class="container footer">
