--- a/education.html
+++ b/education.html
@@ -57,7 +57,7 @@
   <h2 class="address">5619 South 19th Street, Omaha, NE 55376</h2>
   <h3 class="position">&mdash; Middle School Education</h3>
   <h4 class="date">August 2010 - May 2014</h4>
-  <h2 class="place">St. Michael-Albertville Senior High School,</h2>
+  <h2 class="place">St. Michael-Albertville Senior High School</h2>
   <h2 class="address">5800 Jamison Ave Northeast, St. Michael, MN 55376</h2>
   <h3 class="position">&mdash; High School Diploma</h3>
   <h4 class="date">September 2014 - June 2018</h4>
