--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <section class="container body">
   <h1 class="groupTitle">About Me</h1>
-  <p class="aboutMe">My roots were established in Fargo in the year 2000, but I was quickly moved to Omaha, NE with my family so my father could pursue a masters degree at the University of Nebraska Omaha.
+  <p class="aboutMe1">My roots were established in Fargo in the year 2000, but I was quickly moved to Omaha, NE with my family so my father could pursue a masters degree at the University of Nebraska Omaha.
   Growing up in Omaha is where my love for technology was able to flourish with my attendance to R.M Marrs Magnet Center, a school that specialized in science,
   technology, engineering, and math.</p>
   <p class="aboutMe">Marrs gave me the opportunity to explore the worlds of math and robotics by taking challenging math cirriculum throughout my attendance, as well as joining an competetive afterschool LEGO NXT Mindstorms
