--- a/skills.html
+++ b/skills.html
@@ -65,7 +65,7 @@
 <section class="container footer">
   <a href="http://twitter.com/bigm526/" target="_blank"><img src="twitter.png"></a>
   <a href="https://www.instagram.com/masonleonhart/" target="_blank"><img src="instagram.png"></a>
-  <a href="https://www.linkedin.com/" target="_blank"><img src="linkedin.png"></a>
+  <a href="https://www.linkedin.com/in/mason-leonhart-b004831ba/" target="_blank"><img src="linkedin.png"></a>
 </section>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
