--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
   <p class="aboutMe1">My roots were established in Fargo in the year 2000, but I was quickly moved to Omaha, NE with my family so my father could pursue a masters degree at the University of Nebraska Omaha.
   Growing up in Omaha is where my love for technology was able to flourish with my attendance to R.M Marrs Magnet Center, a school that specialized in science,
   technology, engineering, and math.</p>
-  <p class="aboutMe">Marrs gave me the opportunity to explore the worlds of math and robotics by taking challenging math cirriculum throughout my attendance, as well as joining an competetive afterschool LEGO NXT Mindstorms
+  <p class="aboutMe">Marrs gave me the opportunity to explore the worlds of math and robotics by taking challenging math cirriculum throughout my attendance, as well as joining a competetive afterschool LEGO NXT Mindstorms
   robotics team, and taking another competetive robotics class the year after.</p>
   <p class="aboutMe">After graduating from R.M. Marrs, our family moved back up north to St. Michael, MN. Here I attended St. Michael-Albertville Senior High School. STMA was another school that had a strong
   STEM cirruculum, and I was able to take multiple engineering courses that taught me a wide range of concepts in engineering from hydrualics and pneumatics, to designing things in CAD programs, and again programing
-  robots to perform tasks that were assigned to us.</p>
+  robots to perform tasks that were assigned to us as well as other AP matha and science courses.</p>
   <p class="aboutMe">I recieved my diploma from STMA and moved back to Fargo where I had the goal to attend NDSU and major in their computer engineering program. However, I decided to take some time from school and went to work instead.
   I learned what it was actually like to participate in our workforce for a bit, but I am ready to start learning again.</p>
+  <p>During the summer months, I like to spend my time at the archery or trapshooting range, spending time at the lake like anyone else from Fargo. Otherwise, I love spending time with my friends and family. If I'm not doing any of those things,
+  you will probably find me on my computer where I love to play many different types of strategy games, or am tackling raid bosses in World of Warcraft.</p>
 </section>
 
 <section class="container footer">
